--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,6 +8,22 @@
 >
 > 若有问题，请添加微信：cv3d008
 
+## NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
+
+- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！]（https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ）
+
+- 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
+
+- 作者：Saurabh Saxena, Charles Herrmann, Junhwa Hur, Abhishek Kar, Mohammad Norouzi, Deqing Sun, David J. Fleet
+
+- 机构：Google DeepMind、Google Research
+
+- 原文链接：https://arxiv.org/abs/2306.01923
+
+- 官方主页：https://diffusion-vision.github.io
+
+
+
 ### 浙大最新开源RGM | 鲁棒且通用的特征匹配**！**
 
 - 文章链接：[浙大最新开源RGM | 鲁棒且通用的特征匹配！](mp.weixin.qq.com/s/FCMx6WfWraBfynoRhORKTQ)
