--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,7 +10,7 @@
 
 ## NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
 
-- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！]（https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ）
+- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
 
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
 
