--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,19 +8,22 @@
 >
 > 若有问题，请添加微信：cv3d008
 
+# TUM最新开源！Open-Structure：适合SLAM消融实验的结构化数据集！
+
+- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
+- 标题：Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms
+- 作者：Yanyan Li、Zhao Guo等人
+- 原文链接：[点击下载](https://pan.baidu.com/s/16EKumDoxzQKTZNV28USvmw )
+- 官方主页：[点击下载](https://github.com/yanyan-li/Open-Structure)
+
 ## NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
 
 - 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
-
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
-
-- 作者：Saurabh Saxena, Charles Herrmann, Junhwa Hur, Abhishek Kar, Mohammad Norouzi, Deqing Sun, David J. Fleet
-
+- 作者：Saurabh Saxena,Charles Herrmann等人
 - 机构：Google DeepMind、Google Research
-
-- 原文链接：https://arxiv.org/abs/2306.01923
-
-- 官方主页：https://diffusion-vision.github.io
+- 原文链接：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
+- 官方主页：[点击查看](https://diffusion-vision.github.io)
 
 
 
