--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,7 +8,18 @@
 >
 > 若有问题，请添加微信：cv3d008
 
-# TUM最新开源！Open-Structure：适合SLAM消融实验的结构化数据集！
+
+
+### RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！
+
+- 文章链接：[RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！](https://mp.weixin.qq.com/s/6EOpR-t8sulvYo7MFYQztA)
+- 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
+- 作者：Seth Isaacson, Pou-Chun Kung, Mani Ramanagopal, Ram Vasudevan, Katherine A. Skinner
+- 机构：密歇根大学
+- 原文链接：[点击下载](https://pan.baidu.com/s/1-JJu9JfemOprMqWNes4LRA) 
+- 官方主页：[点击查看](https://umautobots.github.io/loner)
+
+### TUM最新开源！Open-Structure：适合SLAM消融实验的结构化数据集！
 
 - 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
 - 标题：Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms
@@ -16,16 +27,14 @@
 - 原文链接：[点击下载](https://pan.baidu.com/s/16EKumDoxzQKTZNV28USvmw )
 - 官方主页：[点击下载](https://github.com/yanyan-li/Open-Structure)
 
-## NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
+### NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
 
 - 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
-- 作者：Saurabh Saxena,Charles Herrmann等人
+- 作者：Saurabh Saxena，Charles Herrmann等人
 - 机构：Google DeepMind、Google Research
 - 原文链接：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
 - 官方主页：[点击查看](https://diffusion-vision.github.io)
-
-
 
 ### 浙大最新开源RGM | 鲁棒且通用的特征匹配**！**
 
@@ -261,19 +270,19 @@ RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！mp.weixin.qq.com/s/9MU
 
 ### 小目标检测的代码：
 
-- tph-yolov5：
+- tph-yolov5：[点击查看](https://github.com/cv516Buaa/tph-yolov5/blob/main/models/common.py)
 
-- 其他改进：
+- 其他改进：[点击查看](https://github.com/Gumpest/YOLOv5-Multibackbone-Compression)
 
 ### github 3D视觉资源汇总：
 
-- github 3D视觉资源汇总：
+- github 3D视觉资源汇总：[点击查看](https://github.com/qxiaofan/awsome-3D-Computer-Vision-Resources)
 
 ### Bundle Adjustment
 
-- Bundle Adjustment: 
+- Bundle Adjustment: [点击查看](https://github.com/qxiaofan/awesome-BA-exercise)
 
-### 回复CV，领取3D视觉精品课件和资料
+### 公众号回复CV，领取3D视觉精品课件和资料
 
 领取计算机视觉精品视频与慕尼黑工业大学、巴塞罗那自治大学沉淀多年的计算机视觉课件资料，包括相机标定、立体匹配、三维重建、SLAM、三维点云、缺陷检测、深度估计、四旋翼无人机等:  [免费！计算机视觉精品视频与慕尼黑工业大学、巴塞罗那自治大学沉淀多年的计算机视觉课件资料](https://mp.weixin.qq.com/s/qOy1qnPFQBxXGA9qxelK6w)
 
@@ -283,4 +292,16 @@ RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！mp.weixin.qq.com/s/9MU
 
 ### 3D视觉交流群成立啦！
 
-> 目前工坊已经建立了3D视觉方向多个社群，包括SLAM、工业3D视觉、自动驾驶方向，细分群包括： [**工业方向**]三维点云、结构光、机械臂、缺陷检测、三维测量、TOF、相机标定、综合群； [**SLAM方向**]多传感器融合、ORB-SLAM、激光SLAM、机器人导航、RTK|GPS|UWB等传感器交流群、SLAM综合讨论群； [**自动驾驶方向**]深度估计、Transformer、毫米波|激光雷达|视觉摄像头传感器讨论群、多传感器标定、自动驾驶综合群等。 [**三维重建方向**]NeRF、colmap、OpenMVS、MVSNet等。 [**无人机方向**]四旋翼建模、无人机飞控等。 除了这些，还有求职、硬件选型、视觉产品落地等交流群。 大家可以添加小助理微信: dddvisiona，备注：加群+方向+学校|公司, 小助理会拉你入群。
+> 目前工坊已经建立了3D视觉方向多个社群，包括SLAM、工业3D视觉、自动驾驶方向，细分群包括： 
+>
+> [**工业方向**]三维点云、结构光、机械臂、缺陷检测、三维测量、TOF、相机标定、综合群； 
+>
+> [**SLAM方向**]多传感器融合、ORB-SLAM、激光SLAM、机器人导航、RTK|GPS|UWB等传感器交流群、SLAM综合讨论群；
+>
+> [**自动驾驶方向**]深度估计、Transformer、毫米波|激光雷达|视觉摄像头传感器讨论群、多传感器标定、自动驾驶综合群等。
+>
+> [**三维重建方向**]NeRF、colmap、OpenMVS、MVSNet等。
+>
+> [**无人机方向**]四旋翼建模、无人机飞控等。 除了这些，还有求职、硬件选型、视觉产品落地等交流群。 
+>
+> 大家可以添加小助理微信: dddvisiona，备注：加群+方向+学校|公司, 小助理会拉你入群。
