--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,263 +10,258 @@
 
 
 
-### RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！
+### RAL 2023开源I基于多输入多尺度Surfel的激光惯性连续时间里程计和建图
 
-- 文章链接：[RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！](https://mp.weixin.qq.com/s/6EOpR-t8sulvYo7MFYQztA)
+- 文章：[RAL 2023开源I基于多输入多尺度Surfel的激光惯性连续时间里程计和建图](https://mp.weixin.qq.com/s/Omuva7GR1lmaWHHq9foeiQ)
+- 标题：SLICT: Multi-input Multi-scale Surfel-Based Lidar-Inertial Continuous-Time Odometry and Mapping
+- 作者：Thien-Minh Nguyen , Daniel Duberg, Patric Jensfelt等人
+- 机构：瑞典皇家理工学院
+- 原文：[点击下载](https://pan.baidu.com/s/147y-vep2r1rf9K00tDVKsQ) 
+- 代码：[点击查看](https://github.com/brytsknguyen/slict)
+
+### CLIP在三维分割场景的突破！ CLIP2Scene：对三维场景的新理解与应用
+
+- 文章：[CLIP在三维分割场景的突破！ CLIP2Scene：对三维场景的新理解与应用](https://mp.weixin.qq.com/s/oB3ufOzWOgKOn-4cwXXaeA)
+- 标题：CLIP2Scene: Towards Label-efficient 3D Scene Understanding by CLIP
+- 作者：Runnan Chen；Youquan Liu；Lingdong Kong等人
+- 机构：香港大学、上海AI实验室、不来梅海文大学等
+- 原文：[点击下载](https://pan.baidu.com/s/1rAUhXKOVy4e10PHRE-3QEA)
+- 代码：[点击下载](https://github.com/runnanchen/CLIP2Scene)
+
+### RAL 2023开源！第一个基于NeRF的实时LiDAR SLAM！
+
+- 文章：[RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！](https://mp.weixin.qq.com/s/6EOpR-t8sulvYo7MFYQztA)
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
 - 作者：Seth Isaacson, Pou-Chun Kung, Mani Ramanagopal, Ram Vasudevan, Katherine A. Skinner
 - 机构：密歇根大学
-- 原文链接：[点击下载](https://pan.baidu.com/s/1-JJu9JfemOprMqWNes4LRA) 
-- 官方主页：[点击查看](https://umautobots.github.io/loner)
+- 原文：[点击下载](https://pan.baidu.com/s/1-JJu9JfemOprMqWNes4LRA) 
+- 代码：[点击查看](https://umautobots.github.io/loner)
 
-### TUM最新开源！Open-Structure：适合SLAM消融实验的结构化数据集！
+### NeurlPS 2023 ！扩散模型对光流和单目深度估计的惊人有效性！
 
-- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
-- 标题：Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms
-- 作者：Yanyan Li、Zhao Guo等人
-- 原文链接：[点击下载](https://pan.baidu.com/s/16EKumDoxzQKTZNV28USvmw )
-- 官方主页：[点击下载](https://github.com/yanyan-li/Open-Structure)
-
-### NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！
-
-- 文章链接：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
+- 文章：[NeurlPS 2023 | 扩散模型对光流和单目深度估计的惊人有效性！](https://mp.weixin.qq.com/s/sG-fowfUV227c_2y9mIzpQ)
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
 - 作者：Saurabh Saxena，Charles Herrmann等人
 - 机构：Google DeepMind、Google Research
-- 原文链接：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
-- 官方主页：[点击查看](https://diffusion-vision.github.io)
+- 原文：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
+- 代码：[点击查看](https://diffusion-vision.github.io)
 
-### 浙大最新开源RGM | 鲁棒且通用的特征匹配**！**
+### 浙大最新开源RGM！鲁棒且通用的特征匹配**！**
 
-- 文章链接：[浙大最新开源RGM | 鲁棒且通用的特征匹配！](mp.weixin.qq.com/s/FCMx6WfWraBfynoRhORKTQ)
+- 文章：[浙大最新开源RGM | 鲁棒且通用的特征匹配！](mp.weixin.qq.com/s/FCMx6WfWraBfynoRhORKTQ)
 
 - 标题：RGM: A Robust Generalist Matching Model
 - 作者：Songyan Zhang, Xinyu Sun, Hao Chen, Bo Li, Chunhua Shen
 - 机构：浙江大学、西北工业大学
-- 原文链接：[点击下载](https://pan.baidu.com/s/1iKFL2OVj5pVXegJ-HNQqDQ)
-- 代码链接：[点击下载](https://github.com/aim-uofa/RGM)
+- 原文：[点击下载](https://pan.baidu.com/s/1iKFL2OVj5pVXegJ-HNQqDQ)
+- 代码：[点击下载](https://github.com/aim-uofa/RGM)
 
-### **RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！**
+### **ICCV 2023开源！基于Transformer的可泛化人体表征来了！**
 
-- 文章链接: 
-
-RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！mp.weixin.qq.com/s/9MUx8nKbJTg46ilR3jLPfQ
-
-- 标题：LONER: LiDAR Only Neural Representations for Real-Time SLAM
-- 作者：Seth Isaacson, Pou-Chun Kung, Mani Ramanagopal, Ram Vasudevan, Katherine A. Skinner
-- 机构：密歇根大学
-- 原文链接：[点击下载](https://pan.baidu.com/s/1jwKtfPgHqfNqs238eZ-Fdw)
-- 代码链接：[点击下载](https://pan.baidu.com/s/16J6Pw-mJetKGMDnbxYZYpA)
-- 官方主页：[点击查看](https://umautobots.github.io/loner)
-
-### **ICCV 2023开源 | 基于Transformer的可泛化人体表征来了！**
-
-- 文章链接：
-
-- 论文题目：TransHuman: A Transformer-based Human Representation for Generalizable Neural Human Rendering
+- 文章：[ICCV 2023开源！基于Transformer的可泛化人体表征来了！](https://mp.weixin.qq.com/s/0kIhbraLZqK_3ReJPbD6VQ)
+- 标题：TransHuman: A Transformer-based Human Representation for Generalizable Neural Human Rendering
 - 作者： Xiao Pan, Zongxin Yang, Jianxin Ma, Chang Zhou, Yi Yang
-- 作者机构： 浙江大学CCAI-ReLER实验室，阿里巴巴达摩院
-- 代码链接：[点击下载](https://pan.baidu.com/s/1xRYnDqonsK91fNzrqvaYJg)
-- 论文链接：[点击下载](https://pan.baidu.com/s/1tBgk6RUAXSggdHbToN4Aew)
+- 作者： 浙江大学CCAI-ReLER实验室，阿里巴巴达摩院
+- 论文：[点击下载](https://pan.baidu.com/s/1tBgk6RUAXSggdHbToN4Aew)
+- 代码：[点击下载](https://pan.baidu.com/s/1xRYnDqonsK91fNzrqvaYJg)
 
 ### **TUM博士最新开源！很适合SLAM消融实验的结构化数据集！**
 
-- 文章链接：
+- 文章：[TUM最新开源！Open-Structure：适合SLAM消融实验的结构化数据集！](https://mp.weixin.qq.com/s/M0XgHGy0FWA9mxT3_QS8Vg)
 
-- 论文题目：Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms
+- 题目：Open-Structure: a Structural Benchmark Dataset for SLAM Algorithms
 - 作者：Xin Deng, WenYu Zhang, Qing Ding, XinMing Zhang
-- 代码链接：[点击下载](https://pan.baidu.com/s/14zeh1su1ppWxceOJLaqqyA)
-- 论文链接：[点击下载](https://pan.baidu.com/s/1nECJj8noMjxfARPgKNRpVQ)
+- 代码：[点击下载](https://pan.baidu.com/s/14zeh1su1ppWxceOJLaqqyA)
+- 论文：[点击下载](https://pan.baidu.com/s/1nECJj8noMjxfARPgKNRpVQ)
 
 ### **CVPR2023 I PointVector: 用矢量表示彻底改变点云分析！**
 
-- 文章链接：
+- 文章：[PointVector: 用矢量表示彻底改变点云分析！](https://mp.weixin.qq.com/s/5fIZD3vNmUIX9-5U7R3-Dg)
 
-- 论文题目：PointVector: A Vector Representation In Point Cloud Analysis
+- 题目：PointVector: A Vector Representation In Point Cloud Analysis
 - 作者：Xin Deng, WenYu Zhang, Qing Ding, XinMing Zhang
-- 作者机构：University of Science and Technology of China
-- 论文链接：[点击下载](https://pan.baidu.com/s/1XJtz-gqFjFqEgeHIb-aIoA)
+- 机构：University of Science and Technology of China
+- 论文：[点击下载](https://pan.baidu.com/s/1XJtz-gqFjFqEgeHIb-aIoA)
 
 ### **复旦大学发布Grad-PU：任意尺度的点云上采样！**
 
-- 文章链接：
+- 文章：[复旦大学发布Grad-PU：任意尺度的点云上采样！](https://mp.weixin.qq.com/s/fw_lgPi7a9l9SAmz3mgvZQ)
 
-- 论文题目：Grad-PU: Arbitrary-Scale Point Cloud Upsampling via Gradient Descent with Learned Distance Functions
+- 题目：Grad-PU: Arbitrary-Scale Point Cloud Upsampling via Gradient Descent with Learned Distance Functions
 - 作者：Yun He；Danhang Tang；Yinda Zhang；Xiangyang Xue；Yanwei Fu
-- 作者机构：复旦大学；谷歌
-- 论文链接：[点击下载](https://pan.baidu.com/s/1KToc7fXcvBBmcqaZjyTO1w)
-- 代码链接：[点击查看](https://pan.baidu.com/s/1dp9r_w2bGcAdI3MCpf97oA)
+- 机构：复旦大学；谷歌
+- 论文：[点击下载](https://pan.baidu.com/s/1KToc7fXcvBBmcqaZjyTO1w)
+- 代码：[点击查看](https://pan.baidu.com/s/1dp9r_w2bGcAdI3MCpf97oA)
 
 ### **所有指标全面领先！图像-点云配准最新SOTA！CoFiI2P详细介绍！**
 
-- 文章链接：
+- 文章：[所有指标全面领先！图像-点云配准最新SOTA！CoFiI2P详细介绍！](https://mp.weixin.qq.com/s/Sq1zMOrdaqEVhkvQr_P7_Q)
 
-- 论文题目：CoFiI2P: Coarse-to-Fine Correspondences for Image-to-Point Cloud Registration
+- 题目：CoFiI2P: Coarse-to-Fine Correspondences for Image-to-Point Cloud Registration
 - 作者：Shuhao Kang, Youqi Liao, Jianping Li, Fuxun Liang, Yuhao Li等人
-- 论文链接：[点击下载](https://pan.baidu.com/s/13whPnUNlVN3thAB67hGx6A)
-- 项目链接：[点击查看](https://github.com/kang-1-2-3/CoFiI2P)
-- 代码链接：[点击查看](https://github.com/kang-1-2-3/CoFiI2P)
+- 论文：[点击下载](https://pan.baidu.com/s/13whPnUNlVN3thAB67hGx6A)
+- 代码：[点击查看](https://github.com/kang-1-2-3/CoFiI2P)
 
 ### **arxiv最新 I LEAP：一种不需要相机姿态的稀疏视图三维建模方法！**
 
-- 文章链接：
+- 文章：[LEAP：一种不需要相机姿态的稀疏视图三维建模方法！](https://mp.weixin.qq.com/s/mePVqR8pu8dbWFbreOpgbw)
 
-- 论文题目：LEAP: LIBERATE SPARSE-VIEW 3D MODELING FROM CAMERA POSES
+- 题目：LEAP: LIBERATE SPARSE-VIEW 3D MODELING FROM CAMERA POSES
 - 作者：Hanwen Jiang Zhenyu Jiang Yue Zhao Qixing Huang
-- 作者机构：Department of Computer Science, The University of Texas at Austin
-- 论文链接：[点击下载](https://arxiv.org/pdf/2310.01410.pdf)
-- 项目链接：[点击查看](https://hwjiang1510.github.io/LEAP/)
-- 代码链接：[点击查看](https://github.com/hwjiang1510/LEAP)
+- 作者：Department of Computer Science, The University of Texas at Austin
+- 论文：[点击下载](https://arxiv.org/pdf/2310.01410.pdf)
+- 项目：[点击查看](https://hwjiang1510.github.io/LEAP/)
+- 代码：[点击查看](https://github.com/hwjiang1510/LEAP)
 
 ### CVPR2023 I BUFFER：点云配准中卓越精度、高效性和泛化性的完美平衡
 
-- 文章链接：
+- 文章：[BUFFER：点云配准中卓越精度、高效性和泛化性的完美平衡](https://mp.weixin.qq.com/s/zWJulRY-LcSoJI5lgCL4Ag)
 
-- 论文题目：Balancing Accuracy, Efficiency, and Generalizability in Point Cloud Registration
+- 题目：Balancing Accuracy, Efficiency, and Generalizability in Point Cloud Registration
 - 作者：Sheng Ao、 Qingyong Hu、Hanyun Wang、Kai Xu、Yulan Guo
-- 作者机构：The Shenzhen Campus of Sun Yat-sen University、Sun Yat-sen University, University of Oxford、Information Engineering University、National University of Defense Technology
-- 论文链接：[点击下载](https://pan.baidu.com/s/1QGFXbaBBPYlgTnoT4Da7tw)
-- 项目链接：[点击下载](https://github.com/aosheng1996/BUFFER)
+- 机构：The Shenzhen Campus of Sun Yat-sen University、Sun Yat-sen University等
+- 论文：[点击下载](https://pan.baidu.com/s/1QGFXbaBBPYlgTnoT4Da7tw)
+- 代码：[点击下载](https://github.com/aosheng1996/BUFFER)
 
 ### ICCV 2023 | 实现实时六自由度物体跟踪
 
-- 文章链接：
+- 文章：[实现实时六自由度物体跟踪](https://mp.weixin.qq.com/s/deasnL4mi7-dufNZy_PV4w)
 
-- 论文题目：Deep ActiveContours for Real-time 6-DoF Object Tracking 
+- 题目：Deep ActiveContours for Real-time 6-DoF Object Tracking 
 - 作者：Chengzhi Wu Junwei Zheng Julius Pfrommer J ̈urgen Beyerer  
-- 作者机构：国防科技大学、、浙江大学、商汤联合实验室
-- 论文链接：[点击下载](https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Deep_Active_Contours_for_Real-time_6-DoF_Object_Tracking_ICCV_2023_paper.pdf)
-- 项目链接：[点击查看](https://zju3dv.github.io/deep_ac/)
+- 机构：国防科技大学、、浙江大学、商汤联合实验室
+- 论文：[点击下载](https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Deep_Active_Contours_for_Real-time_6-DoF_Object_Tracking_ICCV_2023_paper.pdf)
+- 代码：[点击查看](https://zju3dv.github.io/deep_ac/)
 
 ### ICCV 2023 I NDC-Scene：单目三维语义场景补全的新突破
 
-- 文章链接：
+- 文章：[NDC-Scene：单目三维语义场景补全的新突破](https://mp.weixin.qq.com/s/YDtb9WSGoHC4edf8YrztIA)
 
-- 论文题目：NDC-Scene: Boost Monocular 3D Semantic Scene Completion in Normalized Device Coordinates Space 
+- 题目：NDC-Scene: Boost Monocular 3D Semantic Scene Completion in Normalized Device Coordinates Space 
 - 作者：Jiawei Yao；Chuming Li等人  
-- 作者机构：University ofWashington(华盛顿大学)；The University of Sydney(悉尼大学)等
-- 论文链接：[点击下载](https://pan.baidu.com/s/16NX3h6JegWApo2IV1M9fEg)
-- 代码链接：[点击查看](https://pan.baidu.com/s/1KuH4uSN1nMw6jvhOecineQ)
+- 机构：University ofWashington(华盛顿大学)；The University of Sydney(悉尼大学)等
+- 论文：[点击下载](https://pan.baidu.com/s/16NX3h6JegWApo2IV1M9fEg)
+- 代码：[点击查看](https://pan.baidu.com/s/1KuH4uSN1nMw6jvhOecineQ)
 
 ### CVPR2022 | 直接从点云提取3D基元
 
-- 文章链接：
+- 文章：[直接从点云提取3D基元](https://mp.weixin.qq.com/s/Qge0O9c-7Xmeh3ezPbn6VA)
 
-- 论文题目：Point2Cyl: Reverse Engineering 3D Objects from Point Clouds to Extrusion Cylinders 
+- 题目：Point2Cyl: Reverse Engineering 3D Objects from Point Clouds to Extrusion Cylinders 
 - 作者：Mikaela Angelina Uy、Yen-Yu Chang、Minhyuk Sung等人  
-- 作者机构：Stanford University(斯坦福大学) 、KAIST、Autodesk Research(欧特克研究中心)
-- 论文链接：[点击下载](https://pan.baidu.com/s/1gYnx0COnR_8x1kY4W7NWMQ)
+- 机构：Stanford University(斯坦福大学) 、KAIST、Autodesk Research(欧特克研究中心)
+- 论文：[点击下载](https://pan.baidu.com/s/1gYnx0COnR_8x1kY4W7NWMQ)
 
 ### **ICCV2023 SOTA！SLAM中的传感器最佳布置方式！年度必读~**
 
-- 文章链接：
+- 文章：[SOTA！SLAM中的传感器最佳布置方式！年度必读~](https://mp.weixin.qq.com/s/n9J5hNlq7X03BfcMRjOsiA)
 
-- 论文题目：OASIS: Optimal Arrangements for Sensing in SLAM
+- 题目：OASIS: Optimal Arrangements for Sensing in SLAM
 - 作者：Pushyami Kaveti, Matthew Giamou, Hanumant Singh, and David M. Rosen
-- 论文链接：[点击下载](https://pan.baidu.com/s/1GD_YxMer1Q7IwzvVktUqLg)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1a0si6KeJCl6etAxbofUdVg)
+- 论文：[点击下载](https://pan.baidu.com/s/1GD_YxMer1Q7IwzvVktUqLg)
+- 代码：[点击下载](https://pan.baidu.com/s/1a0si6KeJCl6etAxbofUdVg)
 
 ### CFNet：三维激光雷达与相机自动在线外部校准方法
 
-- 文章链接：
+- 文章：[三维激光雷达与相机自动在线外部校准方法](https://mp.weixin.qq.com/s/QOZMoAcfQwXI03EKlz2C-Q)
 
 - 标题：CFNet: LiDAR-Camera Registration Using Calibration Flow Network
 - 作者：Xudong Lv, Boya Wang, Dong Ye, Ziwen Dou and Shuo Wang
 - 来源：Sensors（2021）
-- 论文下载：[点击下载](https://pan.baidu.com/s/1PDFQHrG1kMlYa5Cgkx8TXw)
+- 论文：[点击下载](https://pan.baidu.com/s/1PDFQHrG1kMlYa5Cgkx8TXw)
 
 ### **CVPR2023 | 点云采样方法新创新，深度学习与传统的结合！**
 
-- 文章链接：
+- 文章：[点云采样方法新创新，深度学习与传统的结合！](https://mp.weixin.qq.com/s/GJZkRA3P2WPxoJGP8ZNwBA)
 
-- 论文题目：Tracking Anything with Decoupled Video Segmentation
+- 题目：Tracking Anything with Decoupled Video Segmentation
 - 作者：Ho Kei Cheng, Seoung Wug Oh, Brian Price, Alexander Schwing, Joon-Young Lee
-- 作者机构：伊利诺伊大学、Adobe
-- 论文链接：[点击下载](https://pan.baidu.com/s/1AGsC1SS1TjVwFuFWiX7FCA)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1X2Ss_v1JLUE31Bsz2NNn8A)
+- 机构：伊利诺伊大学、Adobe
+- 论文：[点击下载](https://pan.baidu.com/s/1AGsC1SS1TjVwFuFWiX7FCA)
+- 代码：[点击下载](https://pan.baidu.com/s/1X2Ss_v1JLUE31Bsz2NNn8A)
 
 ### CVPR2023 | 新方法EgoEgo无需配对视频即可预测3D人体运动**！**
 
-- 文章链接：
+- 文章：[新方法EgoEgo无需配对视频即可预测3D人体运动**！](https://mp.weixin.qq.com/s/rHxMbcCuXBuSh5gkEQrU6w)
 
-- 论文题目：Ego-Body Pose Estimation via Ego-Head Pose Estimation
+- 题目：Ego-Body Pose Estimation via Ego-Head Pose Estimation
 - 作者：Jiaman Li、C.Karen Liu†、Jiajun Wu†
-- 作者机构：Stanford University(斯坦福大学)
-- 论文链接：[点击下载](https://pan.baidu.com/s/1X5t7yuvXNOXd8ykdUD88Hw)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1pk8gml9TCFzYJYayU-MlOA)
+- 机构：Stanford University(斯坦福大学)
+- 论文：[点击下载](https://pan.baidu.com/s/1X5t7yuvXNOXd8ykdUD88Hw)
+- 代码：[点击下载](https://pan.baidu.com/s/1pk8gml9TCFzYJYayU-MlOA)
 
 ### **CVPR 2023 Highlight | Nvidia SOTA-NKSR：神经核表面重建！**
 
-- 文章链接：
+- 文章：[Nvidia SOTA-NKSR：神经核表面重建](https://mp.weixin.qq.com/s/mDxNw208x1eU9CoppvNf1g)
 
-- 论文题目：Neural Kernel Surface Reconstruction
+- 题目：Neural Kernel Surface Reconstruction
 - 作者：Jiahui Huang、Zan Gojcic、Matan Atzmon、Or Litany、Sanja Fidler、Francis Williams
-- 作者机构：NVIDIA 、University of Toronto 、Vector Institute
-- 论文链接：[点击下载](https://pan.baidu.com/s/1_Fpvc45-3FYFCdb7yY8sNw)
-- 代码链接：[点击下载](https://pan.baidu.com/s/150_KA5t7OBVxmLGxhAicpg)
+- 机构：NVIDIA 、University of Toronto 、Vector Institute
+- 论文：[点击下载](https://pan.baidu.com/s/1_Fpvc45-3FYFCdb7yY8sNw)
+- 代码：[点击下载](https://pan.baidu.com/s/150_KA5t7OBVxmLGxhAicpg)
 
 ### ICCV2023｜遥遥领先！华为SOTA！无监督自适应3D目标检测！即将开源！
 
-- 文章链接：
+- 文章：[华为SOTA！无监督自适应3D目标检测！即将开源！](https://mp.weixin.qq.com/s/FS93Hq7zTCxIWo1oHNazsg)
 
-- 论文题目：GPA-3D: Geometry-aware Prototype Alignment for Unsupervised Domain Adaptive 3D Object Detection from Point Clouds
+- 题目：GPA-3D: Geometry-aware Prototype Alignment for Unsupervised Domain Adaptive 3D Object Detection from Point Clouds
 - 作者：Ziyu Li、 Jingming Guo、Tongtong Cao、Liu Bingbing、 Wankou Yang
-- 作者机构：华为诺亚方舟实验室、东南大学
+- 机构：华为诺亚方舟实验室、东南大学
 - 论文链接：[点击下载](https://pan.baidu.com/s/1Ga2DiB-uRbaBAyolLkW9yw)
 
 ### **一文带你入门NeRF：利用PyTorch实现NeRF代码详解（附代码）**
 
-- 文章链接：
+- 文章：[一文带你入门NeRF：利用PyTorch实现NeRF代码详解（附代码）](https://mp.weixin.qq.com/s/G8ujK94f6IEPSCXNG0eEuw)
 
-- 代码链接：[点击下载](https://pan.baidu.com/s/1b4_nFeZVjEUoaWPQ1KcglA)
+- 代码：[点击下载](https://pan.baidu.com/s/1b4_nFeZVjEUoaWPQ1KcglA)
 
 ### **ACL-SPC：用自监督学习完成点云补全，更适用于真实场景的点云补全方法！**
 
-- 文章链接：
+- 文章：[ACL-SPC：用自监督学习完成点云补全，更适用于真实场景的点云补全方法！](https://mp.weixin.qq.com/s/7s4JYtyXd7rgOROkpS07Eg)
 
-- 论文题目：ACL-SPC: Adaptive Closed-Loop system for Self-Supervised Point Cloud Completio
+- 题目：ACL-SPC: Adaptive Closed-Loop system for Self-Supervised Point Cloud Completio
 - 作者：Sangmin Hong，Mohsen Yavartanoo，Reyhaneh Neshatavar，Kyoung Mu Lee
-- 作者机构：首尔国立大学
-- 论文链接：[点击下载](https://pan.baidu.com/s/1Ze1dqhBkFr_AlYK8bK8-2w)
+- 机构：首尔国立大学
+- 论文：[点击下载](https://pan.baidu.com/s/1Ze1dqhBkFr_AlYK8bK8-2w)
 
-### **ICCV 2023 I 你还在为点云数据发愁吗？AutoSynth：自动生成 3D 训练数据！**
+### **ICCV 2023 I 你还在为点云数据发愁吗？AutoSynth：自动生成3D训练数据！**
 
-- 文章链接：
+- 文章：[你还在为点云数据发愁吗？AutoSynth：自动生成3D训练数据](https://mp.weixin.qq.com/s/gdDYx5nPMjJCerkWOucthA)
 
-- 论文题目：AutoSynth: Learning to Generate 3D Training Data for Object Point Cloud Registration
+- 题目：AutoSynth: Learning to Generate 3D Training Data for Object Point Cloud Registration
 - 作者：Zheng Dang ; Mathieu Salzmann
-- 作者机构：CVLab, EPFL, Switzerland(瑞士洛桑联邦理工学院);ClearSpace, Switzerland(瑞士勒南的航天公司)
-- 论文链接：[点击下载](https://pan.baidu.com/s/1820ebLG1o29lzTRzCLqGzQ)
+- 机构：CVLab, EPFL, Switzerland(瑞士洛桑联邦理工学院);ClearSpace, Switzerland(瑞士勒南的航天公司)
+- 论文：[点击下载](https://pan.baidu.com/s/1820ebLG1o29lzTRzCLqGzQ)
 
 ### **nuScenes&SemanticKITTI分割第一！最新多模态LIDAR分割网络！最大的室外开源点云分割库！**
 
-- 文章链接：
+- 文章：[nuScenes&SemanticKITTI分割第一！最新多模态LIDAR分割网络！最大的室外开源点云分割库](https://mp.weixin.qq.com/s/7r3m3Hvgpf0_a3_nWnN5aA)
 
-- 论文题目：UniSeg: A Unified Multi-Modal LiDAR Segmentation Network and the OpenPCSeg Codebase
+- 题目：UniSeg: A Unified Multi-Modal LiDAR Segmentation Network and the OpenPCSeg Codebase
 - 作者：Youquan Liu, Runnan Chen, Xin Li, Lingdong Kong等人
-- 作者机构：上海AI Lab、布雷默海文大学、香港大学、华东师范大学等单位
-- 论文链接：[点击下载](https://pan.baidu.com/s/16puNQzCEpxcY1cDzpgc_xQ)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1bdghhYP_gqG_lM40bhIMWg)
+- 机构：上海AI Lab、布雷默海文大学、香港大学、华东师范大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/16puNQzCEpxcY1cDzpgc_xQ)
+- 代码：[点击下载](https://pan.baidu.com/s/1bdghhYP_gqG_lM40bhIMWg)
 
 ### **基于文本提示就可自动实现复杂计算机视觉任务？**
 
-- 文章链接：
+- 文章：[基于文本提示就可自动实现复杂计算机视觉任务](https://mp.weixin.qq.com/s/hfgeG3MolloXc-ahbT1WGw)
 
-- 论文题目：Visual Programming:  Compositional visual reasoning without training
+- 题目：Visual Programming:  Compositional visual reasoning without training
 - 作者：Tanmay Gupta，Aniruddha Kembhavi
-- 作者机构：Allen Insttute for AI
-- 论文链接：[点击下载](https://pan.baidu.com/s/1_ttsA76C_-dg4o3ofexfXg)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1LzU_4CRR3Kp-oRz0XKReUA)
+- 机构：Allen Insttute for AI
+- 链接：[点击下载](https://pan.baidu.com/s/1_ttsA76C_-dg4o3ofexfXg)
+- 代码：[点击下载](https://pan.baidu.com/s/1LzU_4CRR3Kp-oRz0XKReUA)
 
 ### **ICCV 2023开源 | 最新跟踪一切！分割一切视频版来了！**
 
-- 文章链接：
+- 文章：[最新跟踪一切！分割一切视频版来了！](https://mp.weixin.qq.com/s/PIYSCa6GjKVPxLUp2n9-Rw)
 
-- 论文题目：Tracking Anything with Decoupled Video Segmentation
+- 题目：Tracking Anything with Decoupled Video Segmentation
 - 作者：Ho Kei Cheng, Seoung Wug Oh, Brian Price, Alexander Schwing, Joon-Young Lee
-- 作者机构：伊利诺伊大学、Adobe
-- 论文链接：[点击下载](https://pan.baidu.com/s/1_Sa4ssvxfuonOBO9WqdVOg)
-- 代码链接：[点击下载](https://pan.baidu.com/s/1Kfr-b-Bz17eRnHUVCbvEZg)
+- 机构：伊利诺伊大学、Adobe
+- 论文：[点击下载](https://pan.baidu.com/s/1_Sa4ssvxfuonOBO9WqdVOg)
+- 代码：[点击下载](https://pan.baidu.com/s/1Kfr-b-Bz17eRnHUVCbvEZg)
 
 ### 小目标检测的代码：
 
@@ -274,9 +269,9 @@ RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！mp.weixin.qq.com/s/9MU
 
 - 其他改进：[点击查看](https://github.com/Gumpest/YOLOv5-Multibackbone-Compression)
 
-### github 3D视觉资源汇总：
+### Github 3D视觉资源汇总：
 
-- github 3D视觉资源汇总：[点击查看](https://github.com/qxiaofan/awsome-3D-Computer-Vision-Resources)
+- Github 3D视觉资源汇总：[点击查看](https://github.com/qxiaofan/awsome-3D-Computer-Vision-Resources)
 
 ### Bundle Adjustment
 
@@ -304,4 +299,4 @@ RAL 2023开源 | 第一个基于NeRF的实时LiDAR SLAM！mp.weixin.qq.com/s/9MU
 >
 > [**无人机方向**]四旋翼建模、无人机飞控等。 除了这些，还有求职、硬件选型、视觉产品落地等交流群。 
 >
-> 大家可以添加小助理微信: dddvisiona，备注：加群+方向+学校|公司, 小助理会拉你入群。
+> 大家可以添加小助理微信: dddvisiona，备注：加群+方向+学校/公司, 小助理会拉你入群。
