--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,7 +8,14 @@
 >
 > 若有问题，请添加微信：cv3d008
 
+### ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！
 
+- 文章：[ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！](https://mp.weixin.qq.com/s/t1Ok7ERVJazpTlXsBfmXag)
+- 标题：SLICT: Multi-input Multi-scale Surfel-Based Lidar-Inertial Continuous-Time Odometry and Mapping
+- 作者：Cheng-Kun Yang,Min-Hung Chen等人
+- 机构：National Taiwan University等单位
+- 原文：[点击下载](https://pan.baidu.com/s/1fP0cF0-sYkug-bWo0UDLng) 
+- 代码：[点击查看](https://jimmy15923.github.io/mit_web/)
 
 ### RAL 2023开源I基于多输入多尺度Surfel的激光惯性连续时间里程计和建图
 
