--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -8,6 +8,17 @@
 >
 > 若有问题，请添加微信：cv3d008
 
+
+
+### ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！
+
+- 文章：[ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！](https://mp.weixin.qq.com/s/t1Ok7ERVJazpTlXsBfmXag)
+- 标题：Cascade-DETR: Delving into High-Quality Universal Object Detection
+- 作者：Mingqiao Ye、Lei Ke、Siyuan Li等人
+- 机构：苏黎世联邦理工学院、香港科技大学
+- 原文：[点击下载](https://pan.baidu.com/s/1p-QTghh5MCxu-VM4AB1Zsg) 
+- 代码：[点击查看](https://github.com/SysCV/cascade-detr)
+
 ### ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！
 
 - 文章：[ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！](https://mp.weixin.qq.com/s/t1Ok7ERVJazpTlXsBfmXag)
