--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,9 +10,9 @@
 
 
 
-### ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！
+### ICCV2023 | 第一个基于DETR的高质量通用目标检测方法
 
-- 文章：[ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！](https://mp.weixin.qq.com/s/t1Ok7ERVJazpTlXsBfmXag)
+- 文章：[ICCV2023 | 第一个基于DETR的高质量通用目标检测方法](https://mp.weixin.qq.com/s/iiaLRh4Q4YtwkB70ugyVMQ)
 - 标题：Cascade-DETR: Delving into High-Quality Universal Object Detection
 - 作者：Mingqiao Ye、Lei Ke、Siyuan Li等人
 - 机构：苏黎世联邦理工学院、香港科技大学
