--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,6 +10,14 @@
 
 
 
+### 百度新突破！商业可行性已验证！EgoVM：轻量级矢量化地图解析
+
+- 文章：[百度新突破！商业可行性已验证！EgoVM：轻量级矢量化地图解析](https://mp.weixin.qq.com/s/ra6NaXYi9moNCp1XDr1dag)
+- 标题：EgoVM: Achieving Precise Ego-Localization using Lightweight Vectorized Maps
+- 作者：Yuzhe He 、ShuangLiang、 Xiaofei Rui等人
+- 机构：百度
+- 原文：[点击下载](链接：https://pan.baidu.com/s/1UCeNEewd4PBTW3CL0E6ggQ) 
+
 ### ICCV2023 | 第一个基于DETR的高质量通用目标检测方法
 
 - 文章：[ICCV2023 | 第一个基于DETR的高质量通用目标检测方法](https://mp.weixin.qq.com/s/iiaLRh4Q4YtwkB70ugyVMQ)
