--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,13 +10,21 @@
 
 
 
+### CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法
+
+- 文章：[CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法](https://mp.weixin.qq.com/s/tZzxCrXR6gOFvRxv0Vw9Qw)
+- 标题：ECON: Explicit Clothed humans Optimized via Normal integration
+- 作者：Yuliang Xiu、Jinlong Yang、Xu Cao等人
+- 机构：日本大阪大学、荷兰阿姆斯特丹大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1pwNOZcDZs1REcT_eeD6WBA)
+
 ### 百度新突破！商业可行性已验证！EgoVM：轻量级矢量化地图解析
 
 - 文章：[百度新突破！商业可行性已验证！EgoVM：轻量级矢量化地图解析](https://mp.weixin.qq.com/s/ra6NaXYi9moNCp1XDr1dag)
 - 标题：EgoVM: Achieving Precise Ego-Localization using Lightweight Vectorized Maps
 - 作者：Yuzhe He 、ShuangLiang、 Xiaofei Rui等人
 - 机构：百度
-- 原文：[点击下载](链接：https://pan.baidu.com/s/1UCeNEewd4PBTW3CL0E6ggQ) 
+- 论文：[点击下载](链接：https://pan.baidu.com/s/1UCeNEewd4PBTW3CL0E6ggQ) 
 
 ### ICCV2023 | 第一个基于DETR的高质量通用目标检测方法
 
@@ -24,7 +32,7 @@
 - 标题：Cascade-DETR: Delving into High-Quality Universal Object Detection
 - 作者：Mingqiao Ye、Lei Ke、Siyuan Li等人
 - 机构：苏黎世联邦理工学院、香港科技大学
-- 原文：[点击下载](https://pan.baidu.com/s/1p-QTghh5MCxu-VM4AB1Zsg) 
+- 论文：[点击下载](https://pan.baidu.com/s/1p-QTghh5MCxu-VM4AB1Zsg) 
 - 代码：[点击查看](https://github.com/SysCV/cascade-detr)
 
 ### ICCV2023开源SOTA！2D-3D交错Transformer，性能史诗级增强！
@@ -33,7 +41,7 @@
 - 标题：SLICT: Multi-input Multi-scale Surfel-Based Lidar-Inertial Continuous-Time Odometry and Mapping
 - 作者：Cheng-Kun Yang,Min-Hung Chen等人
 - 机构：National Taiwan University等单位
-- 原文：[点击下载](https://pan.baidu.com/s/1fP0cF0-sYkug-bWo0UDLng) 
+- 论文：[点击下载](https://pan.baidu.com/s/1fP0cF0-sYkug-bWo0UDLng) 
 - 代码：[点击查看](https://jimmy15923.github.io/mit_web/)
 
 ### RAL 2023开源I基于多输入多尺度Surfel的激光惯性连续时间里程计和建图
@@ -42,7 +50,7 @@
 - 标题：SLICT: Multi-input Multi-scale Surfel-Based Lidar-Inertial Continuous-Time Odometry and Mapping
 - 作者：Thien-Minh Nguyen , Daniel Duberg, Patric Jensfelt等人
 - 机构：瑞典皇家理工学院
-- 原文：[点击下载](https://pan.baidu.com/s/147y-vep2r1rf9K00tDVKsQ) 
+- 论文：[点击下载](https://pan.baidu.com/s/147y-vep2r1rf9K00tDVKsQ) 
 - 代码：[点击查看](https://github.com/brytsknguyen/slict)
 
 ### CLIP在三维分割场景的突破！ CLIP2Scene：对三维场景的新理解与应用
@@ -51,7 +59,7 @@
 - 标题：CLIP2Scene: Towards Label-efficient 3D Scene Understanding by CLIP
 - 作者：Runnan Chen；Youquan Liu；Lingdong Kong等人
 - 机构：香港大学、上海AI实验室、不来梅海文大学等
-- 原文：[点击下载](https://pan.baidu.com/s/1rAUhXKOVy4e10PHRE-3QEA)
+- 论文：[点击下载](https://pan.baidu.com/s/1rAUhXKOVy4e10PHRE-3QEA)
 - 代码：[点击下载](https://github.com/runnanchen/CLIP2Scene)
 
 ### RAL 2023开源！第一个基于NeRF的实时LiDAR SLAM！
@@ -60,7 +68,7 @@
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
 - 作者：Seth Isaacson, Pou-Chun Kung, Mani Ramanagopal, Ram Vasudevan, Katherine A. Skinner
 - 机构：密歇根大学
-- 原文：[点击下载](https://pan.baidu.com/s/1-JJu9JfemOprMqWNes4LRA) 
+- 论文：[点击下载](https://pan.baidu.com/s/1-JJu9JfemOprMqWNes4LRA) 
 - 代码：[点击查看](https://umautobots.github.io/loner)
 
 ### NeurlPS 2023 ！扩散模型对光流和单目深度估计的惊人有效性！
@@ -69,7 +77,7 @@
 - 标题：The Surprising Effectiveness of Diffusion Models for Optical Flow and Monocular Depth Estimation
 - 作者：Saurabh Saxena，Charles Herrmann等人
 - 机构：Google DeepMind、Google Research
-- 原文：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
+- 论文：[点击下载](https://pan.baidu.com/s/1EU3Ag5LiX5zDNM-Vaa6LAQ) 
 - 代码：[点击查看](https://diffusion-vision.github.io)
 
 ### 浙大最新开源RGM！鲁棒且通用的特征匹配**！**
@@ -79,7 +87,7 @@
 - 标题：RGM: A Robust Generalist Matching Model
 - 作者：Songyan Zhang, Xinyu Sun, Hao Chen, Bo Li, Chunhua Shen
 - 机构：浙江大学、西北工业大学
-- 原文：[点击下载](https://pan.baidu.com/s/1iKFL2OVj5pVXegJ-HNQqDQ)
+- 论文：[点击下载](https://pan.baidu.com/s/1iKFL2OVj5pVXegJ-HNQqDQ)
 - 代码：[点击下载](https://github.com/aim-uofa/RGM)
 
 ### **ICCV 2023开源！基于Transformer的可泛化人体表征来了！**
@@ -276,7 +284,7 @@
 - 题目：Visual Programming:  Compositional visual reasoning without training
 - 作者：Tanmay Gupta，Aniruddha Kembhavi
 - 机构：Allen Insttute for AI
-- 链接：[点击下载](https://pan.baidu.com/s/1_ttsA76C_-dg4o3ofexfXg)
+- 论文：[点击下载](https://pan.baidu.com/s/1_ttsA76C_-dg4o3ofexfXg)
 - 代码：[点击下载](https://pan.baidu.com/s/1LzU_4CRR3Kp-oRz0XKReUA)
 
 ### **ICCV 2023开源 | 最新跟踪一切！分割一切视频版来了！**
