--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,6 +10,22 @@
 
 
 
+### TRO2023港大开源 | 适用于高分辨率雷达的非光线投射占用栅格建图！
+
+- 文章：[TRO2023港大开源 | 适用于高分辨率雷达的非光线投射占用栅格建图](https://mp.weixin.qq.com/s/H45xF4pKi2ACG_WUhYNdtw)
+- 标题：Occupancy Grid Mapping without Ray-Casting for High-resolution LiDAR Sensors
+- 作者：Yixi Cai, Fanze Kong, Yunfan Ren, Fangcheng Zhu等人
+- 机构：香港大学火星实验室
+- 论文：[点击下载](https://t.zsxq.com/13aYnCkvT)
+
+### CVPR2022 | 一种能够捕获多尺度物体信息的视觉Transformer，参数减半，性能不变！
+
+- 文章：[CVPR2022 | 一种能够捕获多尺度物体信息的视觉Transformer，参数减半，性能不变！](https://mp.weixin.qq.com/s/W04EgUBSk55k_RVFDIQUXg)
+- 标题：Shunted Self-Attention via Multi-Scale Token Aggregation
+- 作者：Sucheng Ren, Daquan Zhou等人
+- 机构：新加坡国立大学，华南理工大学，字节跳动
+- 论文：[点击下载](https://t.zsxq.com/13jSRv5ZZ)
+
 ### CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法
 
 - 文章：[CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法](https://mp.weixin.qq.com/s/tZzxCrXR6gOFvRxv0Vw9Qw)
