--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,13 +10,37 @@
 
 
 
+### 22项开源NeRF SLAM顶会方案整理！（上）
+
+- 文章：[待更新](###)
+- 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
+- 作者：Qiangeng Xu, Zexiang Xu等人
+- 机构：南加州大学、麻省理工学院等多个单位
+- 论文：[点击下载](https://pan.baidu.com/s/17S_CFsJtq496uy7HZxbSWg)
+
+### NeurlPS'23开源 | 大规模室外NeRF也可以实时渲染
+
+- 文章：[NeurlPS'23开源 | 大规模室外NeRF也可以实时渲染](https://mp.weixin.qq.com/s/CgW1w5owLx3B5vA5LIKfQg)
+- 标题：UE4-NeRF:Neural Radiance Field for Real-Time Rendering of Large-Scale Scene
+- 作者：Jiaming Gu, Minchao Jiang, Hongsheng Li等人
+- 机构：西安电子科技大学、西澳大利亚大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1_sAgC17QW5MZAlbcjjf20A)
+
+### 上线一周就2.1k star！单张图像直接转为3D模型！
+
+- 文章：[上线一周就2.1k star！单张图像直接转为3D模型！](https://mp.weixin.qq.com/s/LPo-buNGanWSboreA_r8uA)
+- 标题：Wonder3D: Single Image to 3D using Cross-Domain Diffusion
+- 作者：Xiaoxiao Long, Yuan-Chen Guo, Cheng Lin等人
+- 机构：香港大学、清华大学、VAST、miHoYo、宾夕法尼亚大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1ByC3fwa_zgDLfEljJfYH6w)
+
 ### TRO2023港大开源 | 适用于高分辨率雷达的非光线投射占用栅格建图！
 
 - 文章：[TRO2023港大开源 | 适用于高分辨率雷达的非光线投射占用栅格建图](https://mp.weixin.qq.com/s/H45xF4pKi2ACG_WUhYNdtw)
 - 标题：Occupancy Grid Mapping without Ray-Casting for High-resolution LiDAR Sensors
 - 作者：Yixi Cai, Fanze Kong, Yunfan Ren, Fangcheng Zhu等人
 - 机构：香港大学火星实验室
-- 论文：[点击下载](https://t.zsxq.com/13aYnCkvT)
+- 论文：[点击下载](https://pan.baidu.com/s/1KToeUy3m6jN9T6Xeq-rtjg)
 
 ### CVPR2022 | 一种能够捕获多尺度物体信息的视觉Transformer，参数减半，性能不变！
 
@@ -24,7 +48,7 @@
 - 标题：Shunted Self-Attention via Multi-Scale Token Aggregation
 - 作者：Sucheng Ren, Daquan Zhou等人
 - 机构：新加坡国立大学，华南理工大学，字节跳动
-- 论文：[点击下载](https://t.zsxq.com/13jSRv5ZZ)
+- 论文：[点击下载](https://pan.baidu.com/s/1rjs2sqGFqzmFwuClo9GQhQ)
 
 ### CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法
 
