--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,9 +10,49 @@
 
 
 
-### 22项开源NeRF SLAM顶会方案整理！（上）
+### 香港理工大学最新提出精确3D重建的突破性方法
 
-- 文章：[待更新](###)
+- 文章：[香港理工大学最新提出精确3D重建的突破性方法](https://mp.weixin.qq.com/s/PiZGTcJaFAigQvVSmHgl-g)
+- 标题：RayDF: Neural Ray-surface Distance Fields with Multi-view Consistency
+- 作者：Zhuoman Liu Bo Yang
+- 机构：香港理工大学
+- 论文：[点击下载](https://pan.baidu.com/s/1KN63aK0BprG7lK08CFAYlg)
+
+### 自动驾驶位置识别利器：LCPR多模态注意力网络的深入解读与应用
+
+- 文章：[自动驾驶位置识别利器：LCPR多模态注意力网络的深入解读与应用](https://mp.weixin.qq.com/s/_gFWzk6iRaovQpxzlvUosg)
+- 标题：LCPR: A Multi-Scale Attention-Based LiDAR-Camera Fusion Network for Place Recognition
+- 作者：Zijie Zhou、Jingyi Xu等人
+- 机构：北京理工大学
+- 论文：[点击下载](https://pan.baidu.com/s/1Z3yp6DiWzBFdiPdkyRSh-w)
+
+### 俄罗斯某科学技术研究院最新发布！LocoNeRF：基于NeRF的局部SfM的精确定位
+
+- 文章：[俄罗斯某科学技术研究院最新发布！LocoNeRF：基于NeRF的局部SfM的精确定位](https://mp.weixin.qq.com/s/I-0UieB27BoY8oBn93OMoQ)
+- 标题：LocoNeRF: A NeRF-based Approach for Local Structure from Motion for Precise Localization
+- 作者：Artem Nenashev, Mikhail Kurenkov, Andrei Potapov, Iana Zhura, Maksim Katerishich, and Dzmitry Tsetserukou
+- 机构：斯科尔科沃科学技术研究院（俄罗斯）
+- 论文：[点击下载](https://pan.baidu.com/s/1jteOm5DPhx5Ns7XxgJcBNg)
+
+### 大盘点！22项开源NeRF SLAM顶会方案整理！（下）
+
+- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（下）](###)
+- 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
+- 作者：Qiangeng Xu, Zexiang Xu等人
+- 机构：南加州大学、麻省理工学院等多个单位
+- 论文：[点击下载](https://pan.baidu.com/s/1DnWcFyVRJ4n630DaHVn30g)
+
+### 大盘点！22项开源NeRF SLAM顶会方案整理！（中）
+
+- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（中）](###)
+- 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
+- 作者：Qiangeng Xu, Zexiang Xu等人
+- 机构：南加州大学、麻省理工学院等多个单位
+- 论文：[点击下载](https://pan.baidu.com/s/1z4L0F_zQqARj_zcI4btzjw)
+
+### 大盘点！22项开源NeRF SLAM顶会方案整理！（上）
+
+- 文章：[大盘点！22项开源NeRF、SLAM顶会方案整理！（上）](https://mp.weixin.qq.com/s/BBTXieoCoQpu1kCjKkaW-A)
 - 标题：NeRF、Point-NeRF、NeRF-SLAM、iNeRF、NeRF-Loc、NeRF-VINS
 - 作者：Qiangeng Xu, Zexiang Xu等人
 - 机构：南加州大学、麻省理工学院等多个单位
