--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -10,6 +10,22 @@
 
 
 
+### NeurlPS'23开源  首个！开放词汇3D实例分割！
+
+- 文章：[NeurlPS'23开源  首个！开放词汇3D实例分割！](###)
+- 标题：OpenMask3D: Open-Vocabulary 3D Instance Segmentation
+- 作者：Ayça Takmaz、Elisabetta Fedele等人
+- 机构：ETH Zurich、ETH AI Center等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1REiCkJ-K5QQyCQasfUOrTA)
+
+### 国家重点研究院联合清华北大提出的单视图3D场景重建
+
+- 文章：[国家重点研究院联合清华北大提出的单视图3D场景重建](https://mp.weixin.qq.com/s/bk5edz8i7PMx-NnSRF8iNA)
+- 标题：Single-view 3D Scene Reconstruction with High-fidelity Shape and Texture
+- 作者：Yixin Chen, Junfeng Ni等人
+- 机构：BIGAI、清华大学等单位
+- 论文：[点击下载](https://pan.baidu.com/s/1xDNEj5ux_a2CUDGK5I6GCw)
+
 ### 香港理工大学最新提出精确3D重建的突破性方法
 
 - 文章：[香港理工大学最新提出精确3D重建的突破性方法](https://mp.weixin.qq.com/s/PiZGTcJaFAigQvVSmHgl-g)
