--- a/paper/3D视觉工坊最新论文汇总.md
+++ b/paper/3D视觉工坊最新论文汇总.md
@@ -1,18 +1,76 @@
 ## 微信公众号3D视觉工坊&计算机视觉工坊&3DCV最新论文汇总
 
-> 以下主要收录[3D视觉工坊](https://mp.weixin.qq.com/s/ZwvhDOJeCknGChVoSbPdmg)发布的最新论文解读和代码汇总，如有不到之处，还请批评指正！
+> 欢迎关注微信公众号**3D视觉工坊**
 >
->  [3D视觉从入门到精通](https://mp.weixin.qq.com/s/ZwvhDOJeCknGChVoSbPdmg)知识星球专注于工业3D视觉、自动驾驶、SLAM、自动驾驶等领域。 
+> 以下主要收录[**3D视觉工坊**](https://mp.weixin.qq.com/s/ZwvhDOJeCknGChVoSbPdmg)发布的最新论文解读和代码汇总，如有不到之处，还请批评指正！
 >
-> 国内最专业的3D视觉社区官网： [www.3dcver.com](http://www.3dcver.com/) 
+>  [**3D视觉从入门到精通**](https://mp.weixin.qq.com/s/ZwvhDOJeCknGChVoSbPdmg)知识星球专注于工业3D视觉、自动驾驶、SLAM、自动驾驶等领域。 
 >
-> 若有问题，请添加微信：cv3d008
+> 国内最专业的**3D视觉全栈学习路线**： [www.3dcver.com](http://www.3dcver.com/) 
+>
+> 提取码、请联系**微信**：**cv3d008**
 
 
+
+### 多伦多大学最新提出在现实感传感器模拟中的野外物体重建
+
+- 文章：[多伦多大学最新提出在现实感传感器模拟中的野外物体重建](https://mp.weixin.qq.com/s/DT56HjKZHkPw5RZLGjf6NQ)
+- 标题：Reconstructing Objects in-the-wild for Realistic Sensor Simulation
+- 作者：Ze Yang, Sivabalan Manivasagam等人
+- 机构：Waabi, University of Toronto
+- 论文：[点击下载](https://pan.baidu.com/s/1YbDZEucITlq_J6sMhOpVkg)
+
+### NeurlPS'23开源！第一个可泛化的语义NeRF
+
+- 文章：[多伦多大学最新提出在现实感传感器模拟中的野外物体重建](https://mp.weixin.qq.com/s/DT56HjKZHkPw5RZLGjf6NQ)
+- 标题：GNeSF: Generalizable Neural Semantic Fields
+- 作者：Hanlin Chen、ChenLi、Mengqi Guo等人
+- 机构：新加坡国立大学
+- 论文：[点击下载](https://pan.baidu.com/s/18_O7kM6YJzNS3_tnmh97jg)
+
+### CVPR2023|一种不需要点聚类的新颖点云实例分割算法
+
+- 文章：[CVPR2023 | 一种不需要点聚类的新颖点云实例分割算法](https://mp.weixin.qq.com/s/9_q-9mzPqSDrNB6FGL-XiQ)
+- 标题：ISBNet: a 3D Point Cloud Instance Segmentation Network with Instance-aware Sampling and Box-aware Dynamic Convolution
+- 作者：Tuan Duc Ngo, Binh-Son Hua, Khoi Nguyen
+- 机构：VinAI Research, Hanoi, Vietnam
+- 论文：[点击下载](https://pan.baidu.com/s/1TWybTtsyR2827HGnABEoWw)
+
+### 澳大利亚国立大学最新提出短短5秒内从单个输入图像预测对象的3D模型
+
+- 文章：[澳大利亚国立大学最新提出短短5秒内从单个输入图像预测对象的3D模型](https://mp.weixin.qq.com/s/vNK-Jhji02Nsly52uU9jIw)
+- 标题：LRM: Large Reconstruction Model for Single Image to 3D
+- 作者：Yicong Hong, Kai,Zhang, Jiuxiang Gu等人
+- 机构：Adobe Research,澳大利亚国立大学
+- 论文：[点击下载](https://pan.baidu.com/s/1fCzsQFvwPG3DAIHz3hBSQQ)
+
+### CVPR2023 Highlight|ECON：最新单图穿衣人三维重建SOTA算法
+
+- 文章：[CVPR2023 Highlight | ECON：最新单图穿衣人三维重建SOTA算法](https://mp.weixin.qq.com/s/QHbpi-cgHKHxzOxShTajXA)
+- 标题：ECON: Explicit Clothed humans Optimized via Normal integration
+- 作者：Yuliang Xiu,Jinlong Yang,Xu Cao等人
+- 机构：马克斯·普朗克智能系统研究所、日本大阪大学、阿姆斯特丹大学
+- 论文：[点击下载](https://pan.baidu.com/s/1HQZTfctMjbgqEy7S7OkDWg) 
+
+### 英伟达最新开源｜EmerNeRF：全面基于NeRF的自动驾驶仿真框架，无需分割
+
+- 文章：[英伟达最新开源｜EmerNeRF：全面基于NeRF的自动驾驶仿真框架，无需分割](https://mp.weixin.qq.com/s/MWmOv3pD83nVoN-CGgU8bA)
+- 标题：EMERGENT SPATIAL-TEMPORAL SCENE DECOMPOSITION VIA SELF-SUPERVISION
+- 作者：Jiawei Yang, Boris Ivanovic等人
+- 机构：Carnegie Mellon University;Meta Reality Labs Research等
+- 论文：[点击下载](https://pan.baidu.com/s/1ThrtM4yufuznCtRU8adHIA) 
+
+### SIGGRAPH Asia 2023 | 用一台RGB-D相机创建模拟真实人物的虚拟化身
+
+- 文章：[SIGGRAPH Asia 2023 | 用一台RGB-D相机创建模拟真实人物的虚拟化身](https://mp.weixin.qq.com/s/TCtqGlh6KA4CA-nHSpbsRg)
+- 标题：Drivable Avatar Clothing: Faithful Full-Body Telepresence with Dynamic Clothing Driven by Sparse RGB-D Input
+- 作者：Donglai Xiang;Fabian Prada等人
+- 机构：Carnegie Mellon University;Meta Reality Labs Research等
+- 论文：[点击下载](https://pan.baidu.com/s/1f-0RE0vWJxHyhSX98mRjbg) 
 
 ### NeurlPS'23开源  首个！开放词汇3D实例分割！
 
-- 文章：[NeurlPS'23开源  首个！开放词汇3D实例分割！](###)
+- 文章：[NeurlPS'23开源  首个！开放词汇3D实例分割！](https://mp.weixin.qq.com/s/vPy38NKZo7v92-2PsxxApw)
 - 标题：OpenMask3D: Open-Vocabulary 3D Instance Segmentation
 - 作者：Ayça Takmaz、Elisabetta Fedele等人
 - 机构：ETH Zurich、ETH AI Center等单位
